scss/main.scss
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Source Sans Pro', sans-serif;
  letter-spacing: 2px;
}

body {
  color: #666172;
  font-size: 1.4rem;
  height: 100vh;

  background: #8f9192;  /* fallback for old browsers */
  background: -webkit-linear-gradient('to bottom, #8f9192, #b6b9bb, #ffffff');
  background: linear-gradient('to bottom, #8f9192, #b6b9bb, #ffffff');
}

.container {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  position: absolute;
  width: 35rem;
  height: 80%;
  display: flex;
  flex-direction: column;
  padding: .7rem;
  border-radius: 3px;
  box-shadow: 1px 1px 5px #726361;
  background: #f7f4ec;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;

  #modal-opener {
  border: none;
  width: 4rem;
  background: none;
  &:focus {
      outline: none;
    }
  }

  #change-location-btn {
    font-size: 1.3rem;
    color: #726361;
    text-shadow: 1px 1px 1px #666666;
    transition: color .2s ease-out;
    transition: text-shadow .2s ease-out;
    
    &:hover {
      cursor: pointer;
      text-shadow: 2px 2px 5px #666666;
    }
  }

  h1 {
    font-size: 1.5rem;
    text-transform: uppercase;
    letter-spacing: 5px;
  }

  #w-units {
    font-size: 1.5rem;
    width: 4rem;
    background: none;
    border: none;
    color: #726361;

    &:focus {
      outline: none;
    }

    &:hover {
      cursor: pointer;
      text-shadow: 1px 1px 3px #666666;
    }

    #w-imperial {
      border-bottom: 5px solid #f7f4ec00;
      transition: color .3s ease-out;      
      transition: text-shadow .3s ease-out;
      transition: border-bottom .5s ease-in;
    }

    #w-metric {
      border-bottom: 5px solid #f7f4ec00;
      transition: color .3s ease-out;
      transition: text-shadow .3s ease-out;
      transition: border-bottom .5s ease-in;
    }
  }
}

#w-content {
  display: flex;
  height: 100%;
  width: auto;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;

  #w-icon {
    font-size: 13rem;
    text-shadow: 1px 1px 5px #8b8b8b;
  }

  #w-data {
    list-style: none;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    justify-content: space-between;



    li {
      list-style: none;
      display: flex;
      flex-direction: column;
      align-items: center;
      width: 8rem;
      height: auto;

      .label {
        text-align: center;
        font-size: 1rem;
      }

      #w-temperature {
        font-size: 4rem;
      }
    }
  }
}


@media only screen and (max-width: 768px) {
  .container {
    width: 90%;
    height: 90%;
  }
}

@media only screen and (max-width: 475px) {

  .container {
    width: 97%;
    height: 99%;
  }

  #w-content {
    padding-top: 2rem;
    justify-content: center;
    #w-icon {
      font-size: 10rem;
    }
  }

  li {
    padding-top: 5rem;
  }

  #temperature {
    padding-top: 0;
    padding-bottom: 6rem;
  }
}

